objects/ALTF__Opportunity_Manager_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Opportunity Manager behavior.</description>
    <fields>
        <fullName>ALTF__Competitor_Class_List_Provider__c</fullName>
        <description>This field allows an administrator to specify a class which will be used to retrieve a list of competitors associated with an opportunity should the customer be using a source other than the standard competitor picklist.</description>
        <inlineHelpText>This field allows an administrator to specify a class which will be used to retrieve a list of competitors associated with an opportunity should the customer be using a source other than the standard competitor picklist.</inlineHelpText>
        <label>Competitor Class List Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Completeness Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-ribbon&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab One Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab One Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab One Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-thunder&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab Three Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab Three Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab Three Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-setup_assistant_guide&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab Two Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab Two Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab Two Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Add_Action_button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the Add Action button is not shown on Process qualifiers or Assessment questions.</description>
        <inlineHelpText>When this checkbox is selected, the Add Action button is not shown on Process qualifiers or Assessment questions.</inlineHelpText>
        <label>Disable In-line &apos;Add Action&apos; button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Add_Competitor_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected, the Add Competitor option is not shown on the Assessment tab.</description>
        <inlineHelpText>When this checkbox is selected, the Add Competitor option is not shown on the Assessment tab.</inlineHelpText>
        <label>Disable Add Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Competitor_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, prevent users from creating a new competitor</description>
        <inlineHelpText>If checked, prevents users from creating a new competitor. When adding a competitor to an opportunity (in the Competitive Strategy page) users will only be able to select from a pre-existing set of competitors.</inlineHelpText>
        <label>Disable Competitor Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_ContactRole_Sync_Altify_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Contact Roles section of a Salesforce Opty is not automatically updated when a contact is added/deleted on the Rel Map. Note: only the contact name is synched. The role in Altify Rel Map is independent of the contact role in Salesforce</inlineHelpText>
        <label>Disable Rel Map &gt;&gt; Contact Roles Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_ContactRole_Sync_SF_Altify__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Relationship Map is not automatically updated when a Contact Role is added or deleted on the Salesforce Opportunity record. Note: only the contact name is synched. The role in Altify Rel Map is independent of the contact role in Salesforce</inlineHelpText>
        <label>Disable Contact Roles &gt;&gt; Rel Map Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Decision_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, hides decision criteria functionality.</description>
        <inlineHelpText>If checked, hides decision criteria functionality.</inlineHelpText>
        <label>Disable Decision Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Sync_Opportunity_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to disable the synchronization of relationship map contacts with Opportunity contact roles when a Altify Opportunity is inserted or updated.</description>
        <inlineHelpText>Disables the synchronization of relationship map contacts with Opportunity contact roles when a Altify Opportunity is inserted or updated.</inlineHelpText>
        <label>Disable Opp Contact Sync (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Enable_Actions_Spinner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables a spinner on the Overview page when individual actions are selected by the user.</description>
        <inlineHelpText>Enables a spinner on the Overview page when individual actions are selected by the user</inlineHelpText>
        <label>Enable Action Spinner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Hide_PRIME_Type_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked in a customer account the Actions tab should not show the &apos;PRIME Action Type&apos; column and obviously this is not shown when the user is creating an action (given the action create is done inline). So the PRIME type is not mandatory with this setting checked</description>
        <inlineHelpText>If this is checked in a customer account the Actions tab should not show the &apos;PRIME Action Type&apos; column and obviously this is not shown when the user is creating an action (given the action create is done inline)</inlineHelpText>
        <label>Hide PRIME Type Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__List_All_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the OM Actions tab should list all actions associated with the opportunity - not just PRIME actions. A blank value will appear for actions which don&apos;t have a PRIME type.</description>
        <inlineHelpText>If this is checked in a customer account the Actions tab in OM should list all actions associated with the opportunity - not just PRIME actions. Show blank value for actions which don&apos;t have a PRIME type</inlineHelpText>
        <label>List All Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Plan_Type__c</fullName>
        <description>The API name of the Opportunity custom field that defines Opportunity Plan Types. You can use these types to control which tabs and assessment questions are available to the user.</description>
        <inlineHelpText>The API name of the Opportunity custom field that defines Opportunity Plan Types. You can use these types to control which tabs and assessment questions are available to the user.</inlineHelpText>
        <label>Opportunity Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Update_Error_Url__c</fullName>
        <description>This field can be used to specify the URL of a custom error page that helps the user to solve opportunity update validation problems.</description>
        <inlineHelpText>The URL of a custom error page that helps the user to solve opportunity update validation problems.</inlineHelpText>
        <label>Opportunity Update Error URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Assessment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <inlineHelpText>This field controls whether or not the Assessment screen is shown</inlineHelpText>
        <label>Show Assessment (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Prime_Actions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <inlineHelpText>This field controls whether the Altify Prime Actions screen is shown</inlineHelpText>
        <label>Show PRIME Actions (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Test_and_Improve__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <inlineHelpText>This field controls whether the Altify Test &amp; Improve screen is shown</inlineHelpText>
        <label>Show Test and Improve (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Tab_Name_List__c</fullName>
        <defaultValue>&quot;Overview,Process,Assessment,RelMap,Insight,Actions,TestImprove&quot;</defaultValue>
        <description>Enter the names of the Altify Tabs in the required order as a comma separated list. The tabs are as follows: Overview, Process, RelMap, Insight, Actions, TestImprove, CustomTab1, CustomTab2, CustomTab3</description>
        <inlineHelpText>Enter the names of the Altify Tabs in the required order as a comma separated list. The tabs are as follows: Overview, Process, RelMap, Insight, Actions, TestImprove, CustomTab1, CustomTab2, CustomTab3</inlineHelpText>
        <label>Tab Name List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables automated email notification of when PRIME actions are created or updated.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Enable Prime Action Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
        <label>Temp2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr10__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr1__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr2__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Test_And_Improve_Presentr_Process_ImgUrl__c</fullName>
        <description>This field holds a url for an image that defines the Presenters Deal Review process.</description>
        <inlineHelpText>This field holds a url for an image that defines the Presenters Deal Review process.</inlineHelpText>
        <label>Deal Review Presenter Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Test_And_Improve_Process_Image_Url__c</fullName>
        <description>This setting holds a url to an image which defines the T&amp;I process

This image is shown on the welcome page of the T&amp;I</description>
        <inlineHelpText>This setting holds a url to an image which defines the T&amp;I process

This image is shown on the welcome page of the T&amp;I</inlineHelpText>
        <label>Deal Review Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Test_And_Improve_Reviewer_Process_ImgUrl__c</fullName>
        <description>This field holds a url for an image that defines the Reviewers Deal Review process.</description>
        <inlineHelpText>This field holds a url for an image that defines the Reviewers Deal Review process.</inlineHelpText>
        <label>Deal Review Reviewer Process Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Use_Simple_Completion_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Simple Completion Calculations</inlineHelpText>
        <label>Use Simple Completion Calculations</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Opportunity Manager Settings</label>
</CustomObject>